Fixed keywords input field and and spacing between input fields

--- a/src/styles/addresource/addResourceStyle.css
+++ b/src/styles/addresource/addResourceStyle.css
@@ -63,15 +63,17 @@
 
 .primaryfields input,
 .primaryfields-date input {
-  height: 2.5rem;
+  /* max-height: 38px; */
+  height: 2.8rem;
   border-radius: 0.3rem;
   /* border-color: #cfcfcf solid; */
   border-color: #afbcc9;
   border-style: solid;
   border-width: 0.15rem;
   padding: 0.5rem;
+  margin-bottom: 0.4rem;
   /* width: 90%; */
-  width: 100%;
+  /* width: 100%; */
 }
 
 .primaryfields input:focus,
@@ -117,12 +119,12 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 1rem;
-  width: 100%;
+  /* width: 100%; */
 }
 
-#datePublished {
+/* #datePublished {
   width: 100%;
-}
+} */
 
 #addAuthor {
   font-family: inherit;
@@ -223,7 +225,7 @@
 .author-name {
   display: flex;
   flex-direction: column;
-  /* width: 100%; */
+  width: 100%;
 }
 
 .author-name input {
@@ -232,6 +234,11 @@
 
 #physDescription {
   width: 100%;
+  max-height: 100vh;
+  min-height: 40vh;
+  /* resize: none; */
+  height: "unset";
+  line-height: 1.5;
 }
 
 #sptYear {
@@ -239,6 +246,7 @@
 }
 
 #keywords-field {
+  border: none;
   width: 100%;
   /* border-color: #afbcc9; */
 }
@@ -252,6 +260,11 @@
   border-width: 0.15rem;
   padding: 0.5rem;
   width: 100%;
+  max-height: 100vh;
+  min-height: 40vh;
+  /* resize: none; */
+  height: "unset";
+  line-height: 1.5;
 }
 
 #abstractText:focus {
